--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Abhishek Mourya</title>
+  <title>Asia Center</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -40,10 +40,9 @@
     <nav class="nav-menu">
       <ul>
         <li class="active"><a href="#hero"><i class="bx bx-home"></i> <span>Home</span></a></li>
-        <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
-        <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-        <li><a href="#services"><i class="bx bx-server"></i> <span>Work</span></a></li>
-        <li><a href="#contact"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+        <li><a href="#about"><i class="bx bx-user"></i> <span>About Us</span></a></li>
+        <li><a href="#services"><i class="bx bx-server"></i> <span>ICDL</span></a></li>
+        <li><a href="#contact"><i class="bx bx-envelope"></i> <span>Contact Us</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
 
@@ -52,13 +51,13 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Abhishek Mourya</h1>
-      <p><span class="typed" data-typed-items="I Code, I Meme, But most importantly, I Daydream"></span></p>
+      <h1>Asia Center</h1>
+      <p><span class="typed" data-typed-items="Training center, developing skills, Business Administration, Certified exam center"></span></p>
       <div class="social-links">
-        <a href="https://twitter.com/Abhishek_398" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="https://www.instagram.com/abhishek_.mourya/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="https://github.com/abhishek-mourya" target="_blank" class="github"><i class="bx bxl-github"></i></a>
-        <a href="https://www.linkedin.com/in/abhishek-mourya-b36432182/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="#" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="#" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="#" target="_blank" class="github"><i class="bx bxl-github"></i></a>
+        <a href="#" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
     </div>
   </section><!-- End Hero -->
@@ -71,33 +70,33 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Just another 19 year old wannabe cool entrepreneur. I write code, I make memes, I host events, I love building cool new ventures and brands.<br> Check some of them below.</p>
+          <p>Who is Asia Center</p>
         </div>
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+            <img src="#" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>UI/UX Designer &amp; Web Developer.</h3>
+            <h3>Text &amp; Text</h3>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 22 June 2001</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.abhishekmourya.tech</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Chennai, India</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Text</strong>Text</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Text</strong>Text</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Text</strong>Text</li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 19</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> B.Tech</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> ping@abhishekmourya.tech</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Text</strong>Text</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Text</strong>Text</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Text</strong>Text</li>
                 </ul>
               </div>
             </div>
             <p>
-              An anxious mind with interest in tech., business and marketing. Skilled in UI/UX design, Frontend Development, Public Speaking, Sales, business development, marketing and Leadership. Strong engineering professional pursuing a Bachelor of Technology - BTech focused in Electrical, Electronics and Communications Engineering from SRM University. 
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum, nihil itaque, consectetur adipisci maxime obcaecati magnam cumque alias beatae corporis minima. Beatae perspiciatis, rem voluptas temporibus ipsam natus nesciunt sint!
             </p>
           </div>
         </div>
@@ -119,8 +118,8 @@
           <div class="col-lg-3 col-md-6">
             <div class="count-box">
               <i class="icofont-simple-smile"></i>
-              <span data-toggle="counter-up">3</span>
-              <p>Startups</p>
+              <span data-toggle="counter-up">588</span>
+              <p>Students</p>
             </div>
           </div>
 
@@ -128,7 +127,7 @@
             <div class="count-box">
               <i class="icofont-document-folder"></i>
               <span data-toggle="counter-up">21</span>
-              <p>Projects</p>
+              <p>Courses</p>
             </div>
           </div>
 
@@ -136,7 +135,7 @@
             <div class="count-box">
               <i class="icofont-live-support"></i>
               <span data-toggle="counter-up">1,463</span>
-              <p>Hours Of Hardwork</p>
+              <p>Certificate</p>
             </div>
           </div>
 
@@ -158,7 +157,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Skills</h2>
+          <h2>Our Courses Now</h2>
           <p>Yep, Let's see what i got.</p>
         </div>
 
@@ -199,7 +198,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">UI/UX <i class="val">55%</i></span>
+              <span class="skill">ICDL <i class="val">55%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -217,87 +216,15 @@
         </div>
 
       </div>
-    </section><!-- End Skills Section -->
-
-    <!-- ======= Resume Section ======= -->
-    <section id="resume" class="resume">
-      <div class="container" data-aos="fade-up">
-
-        <div class="section-title">
-          <h2>Resume</h2>
-          <p>What am i upto?</p>
-        </div>
-
-        <div class="row">
-          <div class="col-lg-6">
-            <h3 class="resume-title">Currently</h3>
-            <div class="resume-item pb-0">
-              <h4>Founder and CEO @ inkBay</h4>
-              <h5>November '20 - Present</h5>
-              <p><em>inkBay is a freelancing company that offers a brand new way for captivators, creators and curators who believe in setting trends. We provide a one-stop solution for a whole array of resources which includes delivering fancy graphic designs, presenting beautifully crafted lines, adding catchy tunes to your work and much more. .</em></p>
-              <ul>
-                <li>Freelance Agency</li>
-                <li><a href="https://inkbay.in" target="_blank">inkbay.in</a></li>
-                <li>info@inkbay.in</li>
-              </ul>
-            </div>
-
-            <h3 class="resume-title">Education</h3>
-            <div class="resume-item">
-              <h4>B.Tech(Electronics & Communication Engineering)</h4>
-              <h5>2019 - 2023</h5>
-              <p><em>SRM Institiute of Science and Technology</em></p>
-              <p>Chennai, India</p>
-            </div>
-            <div class="resume-item">
-              <h4>Intermediate Schooling</h4>
-              <h5>2017 - 2019</h5>
-              <p><em>Narayana Junior College</em></p>
-              <p>Hyderabad, India</p>
-            </div>
-            <div class="resume-item">
-              <h4>High School</h4>
-              <h5>2007 - 2017</h5>
-              <p><em>Dilsukhnagar Public School</em></p>
-              <p>Hyderabad, India</p>
-            </div>
-          </div>
-          <div class="col-lg-6">
-            <h3 class="resume-title">Professional Experience</h3>
-            <div class="resume-item">
-              <h4>Co-Founder & Team Lead @ The Six Pm Show</h4>
-              <h5>February '20 - Present</h5>
-              <p><em>The Six PM Show is a student-centric and student-run firm, working from SRM Institute of Science and Technology. We hold open-mics and live performances, which welcome a talented lot of all experiences, to showcase their virtues. Brimming with entertaining expertise, we make sure that each form of art is given a well-deserved pedestal of appreciation, hence standing by our theme: “Where art meets stage”. </em>
-              <ul>
-                <li>Arts & Content Production</li>
-                <li><a href="https://sixpmshow.com" target="_blank">sixpmshow.com</a></li>
-                <li>info@sixpmshow.com</li>
-              </ul>
-            </div>
-            <div class="resume-item">
-              <h4>Business Associate @ Alexa Developers SRM</h4>
-              <h5>March '20 - Present</h5>
-              <p><em>Known for edge-of-the-seat events, our aim is to resonate with a coterie of developers. Powered by Amazon Alexa, we form the official Alexa Developers Club in SRMIST. Committed to the services, we engage in workshops and events to build a community of Voice First Developers</em></p>
-              <ul>
-                <li>Tech</li>
-                <li><a href="https://alexadevsrm.com" target="_blank">alexadevsrm.com</a></li>
-                <li>contact@alexadevsrm.com</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </section><!-- End Resume Section -->
+    </section><!-- End Courses Section -->
 
 
-
-    <!-- ======= Work Section ======= -->
+    <!-- ======= ICDL Section ======= -->
     <section id="services" class="services">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Work</h2>
+          <h2>ICDL</h2>
           <p>Check 'em out.</p>
         </div>
 
@@ -311,8 +238,8 @@
                 </svg>
                 <i class="bx bx-pen"></i>
               </div>
-              <h4><a href="https://inkbay.in" target="_blank">inkBay</a></h4>
-              <p>Rapid Solutions for your business</p>
+              <h4><a href="#" target="_blank">Reservation Exam</a></h4>
+              <p>Reservation ICDL Exam Online</p>
             </div>
           </div>
 
@@ -324,8 +251,8 @@
                 </svg>
                 <i class="bx bx-microphone"></i>
               </div>
-              <h4><a href="https://sixpmshow.com" target="_blank">The Six Pm Show</a></h4>
-              <p>Arts & Content production firm</p>
+              <h4><a href="#" target="_blank">Information</a></h4>
+              <p>About ICDL Exams</p>
             </div>
           </div>
 
@@ -337,8 +264,8 @@
                 </svg>
                 <i class="bx bx-face"></i>
               </div>
-              <h4><a href="https://alexadevsrm.com" target="_blank">Alexa Developers SRM</a></h4>
-              <p>Affiliated campus club</p>
+              <h4><a href="#" target="_blank">Downloads</a></h4>
+              <p>All About ICDL Exams</p>
             </div>
           </div>
 
@@ -346,7 +273,7 @@
         </div>
 
       </div>
-    </section><!-- End work Section -->
+    </section><!-- End ICDL Section -->
 
 
     <!-- ======= Contact Section ======= -->
@@ -364,13 +291,13 @@
               <div class="address">
                 <i class="icofont-google-map"></i>
                 <h4>Location:</h4>
-                <p>Chennai, India</p>
+                <p>Damascus - Halboni</p>
               </div>
 
               <div class="email">
                 <i class="icofont-envelope"></i>
                 <h4>Email:</h4>
-                <p>ping@abhishekmourya.tech</p>
+                <p>info@asia-sy.com</p>
               </div>
 
             </div>
@@ -378,8 +305,8 @@
           </div>
 
           <div class="col-lg-8 mt-5 mt-lg-0">
-            <p>Contact forms are way too old school.<br> Talk to my Ex.
-              By clicking the Chat icon down there.<br> She'll get the job done :)</p>
+            <p>Text<br> Text
+              Text<br> Text</p>
 
           </div>
 
@@ -393,15 +320,15 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>Abhishek Mourya</h3>
+      <h3>Asia Center</h3>
       <div class="social-links">
-        <a href="https://twitter.com/Abhishek_398" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="https://www.instagram.com/abhishek_.mourya/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="https://github.com/abhishek-mourya" target="_blank" class="github"><i class="bx bxl-github"></i></a>
-        <a href="https://www.linkedin.com/in/abhishek-mourya-b36432182/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="#" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="#" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="#" target="_blank" class="github"><i class="bx bxl-github"></i></a>
+        <a href="#" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
-        &copy; Copyright <strong><span>Abhihsek Mourya</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Bilal Katbi</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         Designed using <a href="https://bootstrapmade.com/">BootstrapMade</a>
@@ -409,8 +336,6 @@
     </div>
   </footer><!-- End Footer -->
 
-  <a href="#" class="back-to-top"><i class="bx bx-up-arrow-alt"></i></a>
-  <div id="preloader"></div>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/jquery/jquery.min.js"></script>
